Estoy agrengando el primer cambio a mi PaginaWeb02

--- a/repo01/paginaWeb02.html
+++ b/repo01/paginaWeb02.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <h1>Intento numero 02</h1>
+    <d¡v>
+        Lista de datos:
+        <input list="frutas" name="fruta">
+        <datalist id="frutas"
+            <option value="manzana"/>
+            <option value="naranja"/>
+            <option value="cereza"/>
+            <option value="sandia"/>
+            <option value="pera"/>
+        </datalist>
+    </div>
 </body>
 </html>
