Estoy cambiando en la rama cabecera

--- a/repo01/paginaWeb02.html
+++ b/repo01/paginaWeb02.html
@@ -11,7 +11,7 @@
     <d¡v>
         Lista de datos:
         <input list="frutas" name="fruta">
-        <datalist id="frutas"
+        <datalist id="frutas">
             <option value="manzana"/>
             <option value="naranja"/>
             <option value="cereza"/>
