Se agrega el email de contacto

--- a/repo01/paginaWeb02.html
+++ b/repo01/paginaWeb02.html
@@ -19,5 +19,9 @@
             <option value="pera"/>
         </datalist>
     </div>
+    <p>
+        Contacta conmigo:
+        <a href="mailto:camac.wilfredo@gmail.com">Enviame un email</a>
+    </p>
 </body>
 </html>
