--- a/repo01/paginaWeb02.html
+++ b/repo01/paginaWeb02.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Web 02/title>
+    <title>Pagina Web 02</title>
 </head>
 <body>
     <h1>Intento numero 02</h1>
+    <h2>Este es el cambio que agrego a la rama Master</h2>
 </body>
 </html>
