Agrega la funcionalidad de rango

--- a/repo01/paginaWeb02.html
+++ b/repo01/paginaWeb02.html
@@ -23,5 +23,9 @@
         Contacta conmigo:
         <a href="mailto:camac.wilfredo@gmail.com">Enviame un email</a>
     </p>
+    <div>
+        Rango:
+        <input type="range"/>
+    </div>
 </body>
 </html>
