he agregado un h2

--- a/repo01/paginaWeb02.html
+++ b/repo01/paginaWeb02.html
@@ -27,5 +27,6 @@
         Rango:
         <input type="range"/>
     </div>
+    <h2>Esta es una segunda linea para probar el push del repositorio</h2>
 </body>
 </html>
