--- a/repo01/paginaWeb02.html
+++ b/repo01/paginaWeb02.html
@@ -7,7 +7,7 @@
     <title>Pagina Web 02 </title>
 </head>
 <body>
-    <h1>Intento numero 02</h1>
+    <h1>Intento numero 02 - Ahora versión 2.0</h1>
     <d¡v>
         Lista de datos:
         <input list="frutas" name="fruta">
